# Neovim

./: .gitignore  go  init.lua  init2.vim  test.py
.lua.back2/: init.lua
.lua.back2/core/: keymaps.lua  lazy.lua
.lua.back2/plugins/: indent-blankline.lua
.lua.back3/: init2.lua
.lua.back3/plugins/: init.lua
lua/: core.lua  lazy_nvim.lua  mapping.lua
lua/core/: init_core.lua  mapping.lua
lua/plugins/: plugins.lua  test.org
lua/plugins/config/: ale.lua  catppuccin.lua  cmp.lua  ctrlp.lua  format_on_save.lua  formatter.lua  gitsigns.lua  lsp.lua  lualine.lua  luasnip.lua  mason-lspconfig.lua  null-ls.lua  nvim-cmp.lua  nvim-lint.lua  nvim-lspconfig.lua  nvim-tree.lua  nvim-treesitter.lua  others.lua  telescope-fzf-native.lua  telescope.lua  tmux.lua  toggleterm.lua  vale.lua  vim-floaterm.lua
lua_iwabuchi/: .gitignore  README.md  utils.lua
lua_iwabuchi/basics/: magic_method.lua  sentence2dic.lua  sentence2words.lua
lua_iwabuchi/basics/closures/: sample01.lua  sample02.lua
lua_iwabuchi/basics/coroutine/: consumer_producer.lua  sample01.lua  sample02.lua
lua_iwabuchi/basics/metatable/: metatable.lua  metatable_polymorphism.lua  readme.md
lua_iwabuchi/basics/tables/: tables.lua  tables_02.lua  tables_03.lua
lua_iwabuchi/colors/: color.lua
lua_iwabuchi/debugging/: sample.lua
lua_iwabuchi/extended_c/: extend.cpp
lua_iwabuchi/love/30log/: main.lua
lua_iwabuchi/love/bird/: README.md  main.lua
lua_iwabuchi/nvim/: init.lua  neovim.md  set_XDG_CONFIG_HOME.sh  snippets
lua_iwabuchi/nvim/lua/: base.lua  experiments.lua  keymaps.lua  options.lua  snippets  tools.lua
lua_iwabuchi/nvim/lua/buffers/: buf01.lua
lua_iwabuchi/nvim/lua/plugins/: lazy.lua  packer.lua
lua_iwabuchi/nvim/lua/plugins/config/: bufferline.lua  chatgpt.lua  cmp.lua  dapui.lua  fzf.lua  lspconfig.lua  snippets.lua  template.lua
lua_iwabuchi/nvim/lua/plugins/config/dap/: dap.lua  go.lua  keymaps.lua  lua.lua  python.lua  rust.lua
lua_iwabuchi/nvim/lua/plugins/config/snippets/: asm.snippets  c.snippets  cmake.snippets  cpp.snippets  lua.snippets  make.snippets  markdown.snippets  python.snippets  rust.snippets  s.snippets  zsh.snippets
lua_iwabuchi/nvim/lua/plugins/config/template/: CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  docker_compose.yml  template.asm  template.c  template.cpp  template.cs  template.cu  template.h  template.lua  template.md  template.rb  template.rs  template.s  template.sh  template.snippets  template.sql  template.tex  template.vim  template.yaml  template.zsh
lua_iwabuchi/nvim/lua/template/: main.lua
lua_iwabuchi/nvim/lua/tools/: modules.lua  settings.lua
lua_iwabuchi/nvim/lua/tools/floating_window/: floating_window.vim  floating_window_final.vim  floating_window_move.vim  floating_window_with_contents.vim
lua_iwabuchi/nvim/lua/tools/floating_window/lua/: floating_window_01.lua  floating_window_02.lua  floating_window_final.lua  floating_window_move.lua  floating_window_with_contents.lua
lua_iwabuchi/nvim/myplugins/float_window/: README.md  make_project.sh
lua_iwabuchi/nvim/myplugins/float_window/lua/: whid.lua
lua_iwabuchi/nvim/playground/lua/: bucchiman.lua
lua_iwabuchi/nvim/tips/: call:nvim_create_user_command  colorscheme  event:autocmd:vim.api.nvim_autocmd -- 特定のイベントからコールバック,コマンドを使う  event:buffer:BufEnter  -- バッファに入った後  ex:jit_version:lua =jit.version -- luajitのバージョン表示  ex:lua_version:lua print(_VERSION)  -- luaのバージョン表示  inspect:vim.inspect(ex)  -- ex=tableなどで中身を調べられる  options:vim.opt  vim.api.nvim_buf_set_lines  vim.api.nvim_create_buf(false, true)  vim.cmd
lua_iwabuchi/nvim/vim/: experiments.vim
lua_iwabuchi/snippets/: lua.snippets
